[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/kenneyUI-yellow.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/SongInfo:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "song_info"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/SongInfo:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/song_info = SubResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 1 )

[node name="SongInfo" type="Label" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -18.0
grow_horizontal = 0
grow_vertical = 0
align = 2
valign = 2

[node name="WindowDialog" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -96.0
margin_right = 121.0
margin_bottom = 162.0
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Resume" type="Button" parent="WindowDialog/VBoxContainer"]
margin_right = 242.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume game"

[node name="Restart" type="Button" parent="WindowDialog/VBoxContainer"]
margin_top = 66.0
margin_right = 242.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart game"

[node name="QuitToMenu" type="Button" parent="WindowDialog/VBoxContainer"]
margin_top = 132.0
margin_right = 242.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "quit to main menu"

[node name="Label2" type="Label" parent="WindowDialog/VBoxContainer"]
margin_top = 198.0
margin_right = 242.0
margin_bottom = 258.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "controls: 
player 1 - wasd
player 2 - arrows"
align = 1
valign = 1

[connection signal="pressed" from="WindowDialog/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="WindowDialog/VBoxContainer/QuitToMenu" to="." method="_on_QuitToMenu_pressed"]
